# skim-tab

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  result
docs/: ROADMAP.md
specs/: aws.yaml  az.yaml  cargo.yaml  docker.yaml  flux.yaml  gcloud.yaml  git.yaml  helm.yaml  kubectl.yaml  nix.yaml  npm.yaml  terraform.yaml
src/: backup.rs  cd.rs  complete.rs  config.rs  content.rs  context.rs  descent.rs  fco.rs  files.rs  fkill.rs  fvim.rs  genpass.rs  gitac.rs  gitacp.rs  gitclean.rs  gitct.rs  history.rs  history_db.rs  json.rs  k8s.rs  killport.rs  kpod.rs  lib.rs  localip.rs  ls.rs  main.rs  preview.rs  preview_dir.rs  preview_git.rs  preview_proc.rs  specs.rs  urldecode.rs  urlencode.rs  weather.rs
