[package]
name = "skim-tab"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
description = "Rust-native fuzzy completion bridge for zsh — drop-in fzf replacement for fzf-tab using skim"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/skim-tab"
homepage = "https://github.com/pleme-io/skim-tab"
keywords = ["zsh", "completion", "fuzzy-finder", "skim", "fzf-tab"]
categories = ["command-line-utilities"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[lib]
name = "skim_tab"
path = "src/lib.rs"

[[bin]]
name = "skim-tab"
path = "src/main.rs"

[[bin]]
name = "skim-history"
path = "src/history.rs"

[[bin]]
name = "skim-files"
path = "src/files.rs"

[[bin]]
name = "skim-content"
path = "src/content.rs"

[[bin]]
name = "skim-cd"
path = "src/cd.rs"

[[bin]]
name = "skim-fvim"
path = "src/fvim.rs"

[[bin]]
name = "skim-fco"
path = "src/fco.rs"

[[bin]]
name = "skim-fkill"
path = "src/fkill.rs"

[[bin]]
name = "skim-kpod"
path = "src/kpod.rs"

[[bin]]
name = "genpass"
path = "src/genpass.rs"

[[bin]]
name = "killport"
path = "src/killport.rs"

[[bin]]
name = "localip"
path = "src/localip.rs"

[[bin]]
name = "git-clean-branches"
path = "src/gitclean.rs"

[dependencies]
skim = "3.7"
regex = "1"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
